PR/50665: David Binderman: move "dir" to the outer scope so it stays alive when the pointer is used later.